@@ -742,6 +742,25 @@ var CloudCommander, Util, DOM, CloudFunc;
     };
     
     /**
+     * get current direcotory path
+     */
+    DOM.getCurrentDir          = function(){
+        var lRet,
+            lSubstr,
+            lPanel  = DOM.getPanel(),
+            /* получаем имя каталога в котором находимся */
+            lHref   = DOM.getByClass('path', lPanel);
+        
+        lHref       = lHref[0].textContent;
+        
+        lHref       = CloudFunc.removeLastSlash(lHref);
+        lSubstr     = lHref.substr(lHref , lHref.lastIndexOf('/'));
+        lRet        = Util.removeStr(lHref, lSubstr + '/');
+        
+        return lRet;
+    };
+    
+    /**
      * unified way to get current file
      *
      * @pCurrentFile
