@@ -10,6 +10,8 @@ and Util.setTimeout(pFunction [, pCallBack, pTime])
 
 * Added functions in win.js for parsing diskpart output.
 
+* Added function getCurrentDir to DOM module.
+
 
 2012.12.12, Version 0.1.8
 
